[backend/frontend] Fix removing a team from the context doesn't work (#1521)