@@ -5,24 +5,29 @@ import io.openbas.database.repository.*;
 import io.openbas.rest.inject.service.InjectDuplicateService;
 import io.openbas.utils.ExerciseMapper;
 import io.openbas.utils.fixtures.ScenarioFixture;
-import jakarta.transaction.Transactional;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+
+import static io.openbas.database.specification.TeamSpecification.fromScenario;
+import static io.openbas.injectors.email.EmailContract.EMAIL_DEFAULT;
+import static io.openbas.utils.fixtures.InjectFixture.getInjectForEmailContract;
 import static io.openbas.utils.fixtures.TeamFixture.getTeam;
-import static io.openbas.utils.fixtures.ScenarioFixture.getScenario;
-
-import java.util.*;
-
+import static io.openbas.utils.fixtures.UserFixture.getUser;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 @SpringBootTest
-public class ScenarioServiceTest {
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class ScenarioServiceTest {
 
     @Autowired
     ScenarioRepository scenarioRepository;
@@ -54,25 +59,39 @@ public class ScenarioServiceTest {
     private InjectDuplicateService injectDuplicateService;
     @Autowired
     private ExerciseMapper exerciseMapper;
-
+    @Autowired
+    private InjectorContractRepository injectorContractRepository;
+    @Autowired
+    private LessonsCategoryRepository lessonsCategoryRepository;
 
     @InjectMocks
     private ScenarioService scenarioService;
+
+    private static String USER_ID;
+    private static String TEAM_ID;
+    private static String INJECT_ID;
 
     @BeforeEach
     void setUp() {
         scenarioService = new ScenarioService(scenarioRepository, teamRepository, userRepository, documentRepository,
                 scenarioTeamUserRepository, articleRepository, exerciseMapper, grantService, variableService, challengeService,
-                teamService, fileService, injectDuplicateService
+                teamService, fileService, injectDuplicateService, injectRepository, lessonsCategoryRepository
         );
+    }
+
+    @AfterAll
+    public void teardown() {
+        this.userRepository.deleteById(USER_ID);
+        this.teamRepository.deleteById(TEAM_ID);
+        this.injectRepository.deleteById(INJECT_ID);
     }
 
     @DisplayName("Should create new contextual teams during scenario duplication")
     @Test
-    @Transactional(rollbackOn = Exception.class)
+    @Transactional(rollbackFor = Exception.class)
     void createNewContextualTeamsDuringScenarioDuplication(){
         // -- PREPARE --
-        List<Team> scenarioTeams = new ArrayList<>();;
+        List<Team> scenarioTeams = new ArrayList<>();
         Team contextualTeam = this.teamRepository.save(getTeam(null, "fakeTeamName1", true));
         scenarioTeams.add(contextualTeam);
         Team noContextualTeam = this.teamRepository.save(getTeam(null, "fakeTeamName2",false));
@@ -100,8 +119,8 @@ public class ScenarioServiceTest {
             }
         });
         assertEquals(1, scenarioDuplicated.getInjects().size());
-        assertEquals(2, scenario.getInjects().get(0).getTeams().size());
-        scenarioDuplicated.getInjects().get(0).getTeams().forEach(injectTeam -> {
+        assertEquals(2, scenario.getInjects().getFirst().getTeams().size());
+        scenarioDuplicated.getInjects().getFirst().getTeams().forEach(injectTeam -> {
             if (injectTeam.getContextual()){
                 assertNotEquals(contextualTeam.getId(), injectTeam.getId());
                 assertEquals(
@@ -113,4 +132,36 @@ public class ScenarioServiceTest {
             }
         });
     }
+
+    @DisplayName("Should remove team from scenario")
+    @Test
+    void testRemoveTeams() {
+        // -- PREPARE --
+        User user = getUser();
+        User userSaved = this.userRepository.saveAndFlush(user);
+        USER_ID = userSaved.getId();
+        Team team = getTeam(userSaved);
+        Team teamSaved = this.teamRepository.saveAndFlush(team);
+        TEAM_ID = teamSaved.getId();
+        Scenario scenario = ScenarioFixture.getScenario();
+        scenario.setTeams(List.of(teamSaved));
+        Scenario scenarioSaved = this.scenarioRepository.saveAndFlush(scenario);
+
+        InjectorContract injectorContract = this.injectorContractRepository.findById(EMAIL_DEFAULT).orElseThrow();
+        Inject injectDefaultEmail = getInjectForEmailContract(injectorContract);
+        injectDefaultEmail.setScenario(scenarioSaved);
+        injectDefaultEmail.setTeams(List.of(teamSaved));
+        Inject injectDefaultEmailSaved = this.injectRepository.saveAndFlush(injectDefaultEmail);
+        INJECT_ID = injectDefaultEmailSaved.getId();
+
+        // -- EXECUTE --
+        this.scenarioService.removeTeams(scenarioSaved.getId(), List.of(teamSaved.getId()));
+
+        // -- ASSERT --
+        List<Team> teams = this.teamRepository.findAll(fromScenario(scenarioSaved.getId()));
+        assertEquals(0, teams.size());
+        Inject injectAssert = this.injectRepository.findById(INJECT_ID).orElseThrow();
+        assertEquals(0, injectAssert.getTeams().size());
+    }
+
 }
